[package]
name = "rustlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.20"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.4"
