[package]
name = "rustlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.4"
rayon = "1.5"
